Update lists at 20240427-2100

--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -122,7 +122,6 @@ set_real_ip_from 135.181.124.211;
 set_real_ip_from 136.244.111.163;
 set_real_ip_from 137.63.71.51;
 set_real_ip_from 138.59.18.110;
-set_real_ip_from 139.177.192.106;
 set_real_ip_from 139.99.172.11;
 set_real_ip_from 139.99.8.57;
 set_real_ip_from 141.239.149.94;
@@ -498,7 +497,6 @@ set_real_ip_from 185.241.208.204;
 set_real_ip_from 185.241.208.206;
 set_real_ip_from 185.241.208.212;
 set_real_ip_from 185.241.208.232;
-set_real_ip_from 185.241.208.236;
 set_real_ip_from 185.241.208.243;
 set_real_ip_from 185.241.208.54;
 set_real_ip_from 185.241.208.71;
@@ -602,7 +600,6 @@ set_real_ip_from 192.42.116.22;
 set_real_ip_from 192.42.116.220;
 set_real_ip_from 192.42.116.221;
 set_real_ip_from 192.42.116.23;
-set_real_ip_from 192.42.116.24;
 set_real_ip_from 192.42.116.25;
 set_real_ip_from 192.42.116.26;
 set_real_ip_from 192.42.116.27;
@@ -680,6 +677,7 @@ set_real_ip_from 199.195.253.180;
 set_real_ip_from 199.195.253.247;
 set_real_ip_from 2001:1620:51a1:0:8aae:ddff:fe61:8ccc;
 set_real_ip_from 2001:1af8:4700:a114:6::1;
+set_real_ip_from 2001:1b60:2:1:3935:104:0:1;
 set_real_ip_from 2001:1b60:3:220:3039:101:0:1;
 set_real_ip_from 2001:1b60:3:221:3132:102:0:1;
 set_real_ip_from 2001:1b60:3:221:4134:101:0:1;
@@ -701,6 +699,7 @@ set_real_ip_from 2001:41d0:701:1100::4f60;
 set_real_ip_from 2001:41d0:800:1f70::;
 set_real_ip_from 2001:41d0:801:2000::15bb;
 set_real_ip_from 2001:41d0:a:5c0::1;
+set_real_ip_from 2001:41d0:a:fe22::1;
 set_real_ip_from 2001:470:1:908::9001;
 set_real_ip_from 2001:4b20:12:f001::105;
 set_real_ip_from 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
@@ -777,7 +776,6 @@ set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5519;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5520;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5522;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5523;
-set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5524;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5525;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5526;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5527;
@@ -909,7 +907,6 @@ set_real_ip_from 204.8.96.83;
 set_real_ip_from 204.8.96.84;
 set_real_ip_from 204.8.96.85;
 set_real_ip_from 204.8.96.86;
-set_real_ip_from 204.8.96.87;
 set_real_ip_from 204.8.96.88;
 set_real_ip_from 204.8.96.89;
 set_real_ip_from 205.185.113.180;
@@ -974,7 +971,6 @@ set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.6;
 set_real_ip_from 23.155.8.104;
-set_real_ip_from 23.22.182.74;
 set_real_ip_from 23.236.122.62;
 set_real_ip_from 23.26.133.239;
 set_real_ip_from 23.94.133.162;
@@ -1205,7 +1201,6 @@ set_real_ip_from 2620:7:6001::ffff:c759:e653;
 set_real_ip_from 2620:7:6001::ffff:c759:e654;
 set_real_ip_from 2620:7:6001::ffff:c759:e655;
 set_real_ip_from 2620:7:6001::ffff:c759:e656;
-set_real_ip_from 2620:7:6001::ffff:c759:e657;
 set_real_ip_from 2620:7:6001::ffff:c759:e658;
 set_real_ip_from 2620:7:6001::ffff:c759:e659;
 set_real_ip_from 27.255.75.198;
@@ -1620,6 +1615,7 @@ set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.242.254.131;
 set_real_ip_from 38.97.116.244;
+set_real_ip_from 44.223.171.60;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.232.151;
 set_real_ip_from 45.132.246.245;
@@ -1710,6 +1706,7 @@ set_real_ip_from 5.182.86.212;
 set_real_ip_from 51.89.153.112;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.8.113;
+set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.224;
 set_real_ip_from 5.255.101.10;
@@ -1786,6 +1783,7 @@ set_real_ip_from 78.142.18.219;
 set_real_ip_from 79.102.196.128;
 set_real_ip_from 79.124.8.241;
 set_real_ip_from 79.137.198.213;
+set_real_ip_from 79.50.224.220;
 set_real_ip_from 80.210.78.252;
 set_real_ip_from 80.241.60.207;
 set_real_ip_from 80.67.167.81;
@@ -1826,6 +1824,7 @@ set_real_ip_from 85.215.76.62;
 set_real_ip_from 85.239.60.173;
 set_real_ip_from 85.93.218.204;
 set_real_ip_from 86.104.194.13;
+set_real_ip_from 87.118.110.27;
 set_real_ip_from 87.118.115.44;
 set_real_ip_from 87.118.116.103;
 set_real_ip_from 87.118.116.90;
@@ -1928,5 +1927,4 @@ set_real_ip_from 95.164.46.204;
 set_real_ip_from 95.168.173.143;
 set_real_ip_from 95.211.210.103;
 set_real_ip_from 95.211.244.28;
-set_real_ip_from 95.232.0.213;
 set_real_ip_from 98.128.173.33;
