--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -7,6 +7,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.208.86.5;
 allow 103.251.167.10;
@@ -497,6 +498,7 @@ allow 185.241.208.204;
 allow 185.241.208.206;
 allow 185.241.208.212;
 allow 185.241.208.232;
+allow 185.241.208.236;
 allow 185.241.208.243;
 allow 185.241.208.54;
 allow 185.241.208.71;
@@ -521,6 +523,7 @@ allow 185.246.86.197;
 allow 185.247.184.105;
 allow 185.247.184.33;
 allow 185.252.232.218;
+allow 185.254.196.141;
 allow 185.34.33.2;
 allow 185.35.202.222;
 allow 185.38.175.133;
@@ -600,6 +603,7 @@ allow 192.42.116.22;
 allow 192.42.116.220;
 allow 192.42.116.221;
 allow 192.42.116.23;
+allow 192.42.116.24;
 allow 192.42.116.25;
 allow 192.42.116.26;
 allow 192.42.116.27;
@@ -776,6 +780,7 @@ allow 2001:67c:6ec:203:218:33ff:fe44:5519;
 allow 2001:67c:6ec:203:218:33ff:fe44:5520;
 allow 2001:67c:6ec:203:218:33ff:fe44:5522;
 allow 2001:67c:6ec:203:218:33ff:fe44:5523;
+allow 2001:67c:6ec:203:218:33ff:fe44:5524;
 allow 2001:67c:6ec:203:218:33ff:fe44:5525;
 allow 2001:67c:6ec:203:218:33ff:fe44:5526;
 allow 2001:67c:6ec:203:218:33ff:fe44:5527;
@@ -907,6 +912,7 @@ allow 204.8.96.83;
 allow 204.8.96.84;
 allow 204.8.96.85;
 allow 204.8.96.86;
+allow 204.8.96.87;
 allow 204.8.96.88;
 allow 204.8.96.89;
 allow 205.185.113.180;
@@ -1201,6 +1207,7 @@ allow 2620:7:6001::ffff:c759:e653;
 allow 2620:7:6001::ffff:c759:e654;
 allow 2620:7:6001::ffff:c759:e655;
 allow 2620:7:6001::ffff:c759:e656;
+allow 2620:7:6001::ffff:c759:e657;
 allow 2620:7:6001::ffff:c759:e658;
 allow 2620:7:6001::ffff:c759:e659;
 allow 27.255.75.198;
@@ -1332,7 +1339,6 @@ allow 2a05:b0c7:67b0::1;
 allow 2a05:b0c7:67bb::1;
 allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6841::1;
-allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:696c::1;
 allow 2a05:b0c7:6978::1;
 allow 2a05:b0c7:6b6c::1;
@@ -1599,6 +1605,7 @@ allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.220.98.139;
 allow 31.42.185.134;
+allow 34.197.184.109;
 allow 35.0.127.52;
 allow 35.240.241.135;
 allow 37.1.201.144;
@@ -1606,7 +1613,6 @@ allow 37.120.166.23;
 allow 37.120.188.156;
 allow 37.120.239.59;
 allow 37.187.5.192;
-allow 37.228.129.128;
 allow 37.228.129.5;
 allow 37.228.129.63;
 allow 37.252.254.33;
@@ -1615,7 +1621,6 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.254.131;
 allow 38.97.116.244;
-allow 44.223.171.60;
 allow 45.12.3.80;
 allow 45.128.232.151;
 allow 45.132.246.245;
@@ -1679,7 +1684,6 @@ allow 45.95.169.226;
 allow 45.95.169.228;
 allow 45.95.169.230;
 allow 45.95.169.255;
-allow 45.95.202.48;
 allow 46.165.243.36;
 allow 46.182.21.248;
 allow 46.226.164.14;
@@ -1783,7 +1787,6 @@ allow 78.142.18.219;
 allow 79.102.196.128;
 allow 79.124.8.241;
 allow 79.137.198.213;
-allow 79.50.224.220;
 allow 80.210.78.252;
 allow 80.241.60.207;
 allow 80.67.167.81;
@@ -1814,7 +1817,6 @@ allow 84.38.134.231;
 allow 84.38.134.232;
 allow 84.38.134.233;
 allow 84.38.134.234;
-allow 84.54.51.61;
 allow 84.54.51.68;
 allow 84.54.51.69;
 allow 85.17.9.83;
