--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -98,6 +98,7 @@ deny 2001:67c:6ec:203:218:33ff:fe44:5519;
 deny 2001:67c:6ec:203:218:33ff:fe44:5520;
 deny 2001:67c:6ec:203:218:33ff:fe44:5522;
 deny 2001:67c:6ec:203:218:33ff:fe44:5523;
+deny 2001:67c:6ec:203:218:33ff:fe44:5524;
 deny 2001:67c:6ec:203:218:33ff:fe44:5525;
 deny 2001:67c:6ec:203:218:33ff:fe44:5526;
 deny 2001:67c:6ec:203:218:33ff:fe44:5527;
@@ -333,6 +334,7 @@ deny 2620:7:6001::ffff:c759:e653;
 deny 2620:7:6001::ffff:c759:e654;
 deny 2620:7:6001::ffff:c759:e655;
 deny 2620:7:6001::ffff:c759:e656;
+deny 2620:7:6001::ffff:c759:e657;
 deny 2620:7:6001::ffff:c759:e658;
 deny 2620:7:6001::ffff:c759:e659;
 deny 2800:ba0:6:c1::4858;
@@ -463,7 +465,6 @@ deny 2a05:b0c7:67b0::1;
 deny 2a05:b0c7:67bb::1;
 deny 2a05:b0c7:67c6::1;
 deny 2a05:b0c7:6841::1;
-deny 2a05:b0c7:6949::1;
 deny 2a05:b0c7:696c::1;
 deny 2a05:b0c7:6978::1;
 deny 2a05:b0c7:6b6c::1;
