--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -7,6 +7,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.208.86.5;
 allow 103.251.167.10;
@@ -149,7 +150,6 @@ allow 151.80.148.159;
 allow 152.89.233.169;
 allow 154.16.116.61;
 allow 160.119.249.240;
-allow 161.35.129.51;
 allow 162.247.72.192;
 allow 162.247.72.199;
 allow 162.247.74.200;
@@ -180,6 +180,7 @@ allow 171.25.193.79;
 allow 171.25.193.80;
 allow 172.104.182.84;
 allow 172.104.214.41;
+allow 172.235.36.50;
 allow 172.81.131.139;
 allow 172.81.131.156;
 allow 172.81.132.242;
@@ -1234,8 +1235,10 @@ allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7a7:2:3c17:216:3cff:fe40:efc;
+allow 2a01:7a7:2:3c19:216:3cff:fed7:d6b7;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
+allow 2a01:7e03::f03c:94ff:fe7d:8250;
 allow 2a02:13f0:8100:6:205:ce4a:e2d2:1;
 allow 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 allow 2a02:13f0:8100:6:6bc:499d:b353:1;
@@ -1626,6 +1629,7 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.254.131;
 allow 38.97.116.244;
+allow 44.223.234.226;
 allow 45.12.3.80;
 allow 45.128.232.151;
 allow 45.132.246.245;
@@ -1696,7 +1700,6 @@ allow 46.226.164.14;
 allow 46.232.251.191;
 allow 46.234.47.105;
 allow 46.38.255.27;
-allow 50.19.220.197;
 allow 50.3.182.133;
 allow 50.3.182.156;
 allow 51.15.249.160;
@@ -1792,7 +1795,7 @@ allow 77.91.85.147;
 allow 77.91.86.95;
 allow 77.91.87.79;
 allow 78.142.18.219;
-allow 79.102.196.128;
+allow 79.102.134.195;
 allow 79.124.8.241;
 allow 79.137.198.213;
 allow 80.210.78.252;
@@ -1812,7 +1815,6 @@ allow 82.221.131.5;
 allow 82.221.131.71;
 allow 82.221.139.190;
 allow 83.217.9.73;
-allow 83.26.9.159;
 allow 83.96.213.63;
 allow 83.97.20.77;
 allow 84.16.224.227;
@@ -1888,6 +1890,7 @@ allow 91.219.239.166;
 allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.119.126.161;
+allow 92.119.126.163;
 allow 92.205.129.119;
 allow 92.243.24.163;
 allow 92.246.138.145;
