--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -358,8 +358,10 @@ deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
 deny 2a01:6340:2:501::20;
 deny 2a01:7a7:2:3c17:216:3cff:fe40:efc;
+deny 2a01:7a7:2:3c19:216:3cff:fed7:d6b7;
 deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
+deny 2a01:7e03::f03c:94ff:fe7d:8250;
 deny 2a02:13f0:8100:6:205:ce4a:e2d2:1;
 deny 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 deny 2a02:13f0:8100:6:6bc:499d:b353:1;
