--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -7,6 +7,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.208.86.5;
 allow 103.251.167.10;
@@ -237,6 +238,7 @@ allow 185.100.87.250;
 allow 185.100.87.253;
 allow 185.100.87.41;
 allow 185.10.16.41;
+allow 185.106.102.102;
 allow 185.106.94.195;
 allow 185.107.70.56;
 allow 185.112.146.168;
@@ -264,7 +266,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -636,6 +637,7 @@ allow 193.233.133.109;
 allow 193.239.232.230;
 allow 193.26.115.43;
 allow 193.26.115.61;
+allow 193.35.18.105;
 allow 193.35.18.49;
 allow 193.35.18.77;
 allow 193.41.226.117;
@@ -1345,6 +1347,7 @@ allow 2a05:b0c7:67b0::1;
 allow 2a05:b0c7:67bb::1;
 allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6841::1;
+allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:696c::1;
 allow 2a05:b0c7:6978::1;
 allow 2a05:b0c7:6b6c::1;
@@ -1569,6 +1572,7 @@ allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:ed78:7632;
 allow 2a0e:d602:1:14bc::2;
 allow 2a0e:d602:2:2a2::2;
+allow 2a0e:d602:2:55f::2;
 allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:d0::1;
 allow 2a0f:df00:0:255::194;
@@ -1611,6 +1615,7 @@ allow 31.129.22.65;
 allow 31.220.98.139;
 allow 31.42.185.134;
 allow 35.0.127.52;
+allow 35.172.132.23;
 allow 35.240.241.135;
 allow 37.1.201.144;
 allow 37.120.166.23;
@@ -1626,7 +1631,6 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.254.131;
 allow 38.97.116.244;
-allow 44.223.176.228;
 allow 45.12.3.80;
 allow 45.128.232.151;
 allow 45.132.246.245;
@@ -1790,6 +1794,7 @@ allow 77.48.28.239;
 allow 77.81.247.72;
 allow 77.91.85.147;
 allow 77.91.86.95;
+allow 77.91.87.79;
 allow 78.142.18.219;
 allow 79.102.134.195;
 allow 79.124.8.241;
@@ -1824,6 +1829,7 @@ allow 84.38.134.231;
 allow 84.38.134.232;
 allow 84.38.134.233;
 allow 84.38.134.234;
+allow 84.54.51.61;
 allow 84.54.51.68;
 allow 84.54.51.69;
 allow 85.17.9.83;
