--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -8,7 +8,6 @@ set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
 set_real_ip_from 103.172.134.26;
-set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.208.86.5;
 set_real_ip_from 103.251.167.10;
@@ -137,6 +136,7 @@ set_real_ip_from 144.172.118.55;
 set_real_ip_from 144.172.73.11;
 set_real_ip_from 144.172.73.6;
 set_real_ip_from 144.217.80.80;
+set_real_ip_from 146.59.234.220;
 set_real_ip_from 146.59.35.246;
 set_real_ip_from 146.59.35.38;
 set_real_ip_from 146.70.146.26;
@@ -150,7 +150,6 @@ set_real_ip_from 151.80.148.159;
 set_real_ip_from 152.89.233.169;
 set_real_ip_from 154.16.116.61;
 set_real_ip_from 160.119.249.240;
-set_real_ip_from 161.35.129.51;
 set_real_ip_from 162.247.72.192;
 set_real_ip_from 162.247.72.199;
 set_real_ip_from 162.247.74.200;
@@ -228,6 +227,7 @@ set_real_ip_from 179.43.182.232;
 set_real_ip_from 179.43.182.58;
 set_real_ip_from 179.48.251.188;
 set_real_ip_from 180.150.226.99;
+set_real_ip_from 18.214.171.24;
 set_real_ip_from 184.105.48.40;
 set_real_ip_from 185.100.85.132;
 set_real_ip_from 185.100.85.22;
@@ -241,7 +241,6 @@ set_real_ip_from 185.100.87.192;
 set_real_ip_from 185.100.87.250;
 set_real_ip_from 185.100.87.253;
 set_real_ip_from 185.100.87.41;
-set_real_ip_from 185.10.16.41;
 set_real_ip_from 185.106.102.102;
 set_real_ip_from 185.106.94.195;
 set_real_ip_from 185.107.70.56;
@@ -280,6 +279,7 @@ set_real_ip_from 185.181.61.142;
 set_real_ip_from 185.181.61.18;
 set_real_ip_from 185.183.157.214;
 set_real_ip_from 185.183.159.40;
+set_real_ip_from 185.189.167.171;
 set_real_ip_from 185.191.204.254;
 set_real_ip_from 185.193.52.180;
 set_real_ip_from 185.193.66.127;
@@ -1278,8 +1278,10 @@ set_real_ip_from 2a03:4000:55:efb::a;
 set_real_ip_from 2a03:4000:5:65b:388a:15ff:fedc:30d6;
 set_real_ip_from 2a03:4000:56:91:480a:eeff:fea8:f9c6;
 set_real_ip_from 2a03:4000:6:102b:c457:f3ff:feb0:a6d0;
+set_real_ip_from 2a03:4000:62:8:c855:23ff:fef6:50ee;
 set_real_ip_from 2a03:4000:6:4015:8841:50ff:fe0d:719c;
 set_real_ip_from 2a03:4000:6:614:d803:40ff:fec3:832a;
+set_real_ip_from 2a03:4000:66:15:18a0:6bff:fe90:3147;
 set_real_ip_from 2a03:4000:66:d88:6469:50ff:fe0b:98a8;
 set_real_ip_from 2a03:4000:6:b136::4;
 set_real_ip_from 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
@@ -1630,12 +1632,12 @@ set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.242.254.131;
 set_real_ip_from 38.97.116.244;
-set_real_ip_from 44.216.101.4;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.232.151;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.173.197;
 set_real_ip_from 45.134.225.36;
+set_real_ip_from 45.135.132.20;
 set_real_ip_from 45.138.16.107;
 set_real_ip_from 45.138.16.113;
 set_real_ip_from 45.138.16.142;
@@ -1861,6 +1863,8 @@ set_real_ip_from 89.187.143.31;
 set_real_ip_from 89.234.157.254;
 set_real_ip_from 89.236.112.100;
 set_real_ip_from 89.58.18.210;
+set_real_ip_from 89.58.26.216;
+set_real_ip_from 89.58.41.156;
 set_real_ip_from 89.58.41.251;
 set_real_ip_from 89.58.63.200;
 set_real_ip_from 91.103.253.141;
@@ -1935,5 +1939,4 @@ set_real_ip_from 95.164.46.204;
 set_real_ip_from 95.168.173.143;
 set_real_ip_from 95.211.210.103;
 set_real_ip_from 95.211.244.28;
-set_real_ip_from 96.42.26.63;
 set_real_ip_from 98.128.173.33;
