Update lists at 20240501-0900

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,3 +1,4 @@
+allow 100.27.75.88;
 allow 102.130.113.9;
 allow 102.130.117.167;
 allow 102.130.127.117;
@@ -8,6 +9,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.208.86.5;
 allow 103.251.167.10;
@@ -274,7 +276,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -617,6 +618,7 @@ allow 192.42.116.25;
 allow 192.42.116.26;
 allow 192.42.116.27;
 allow 192.42.116.28;
+allow 192.46.210.223;
 allow 192.99.168.180;
 allow 193.105.134.150;
 allow 193.105.134.155;
@@ -674,6 +676,7 @@ allow 198.251.84.237;
 allow 198.251.88.18;
 allow 198.251.89.96;
 allow 198.46.166.157;
+allow 198.46.215.32;
 allow 198.50.128.237;
 allow 198.58.107.53;
 allow 198.96.155.3;
@@ -959,6 +962,7 @@ allow 217.12.221.131;
 allow 217.146.2.41;
 allow 23.137.248.100;
 allow 23.137.248.139;
+allow 23.137.248.69;
 allow 23.137.250.34;
 allow 23.137.250.83;
 allow 23.137.253.108;
@@ -997,6 +1001,7 @@ allow 23.236.122.62;
 allow 23.26.133.239;
 allow 23.94.211.25;
 allow 23.94.36.142;
+allow 2400:8904::f03c:93ff:fe68:23b3;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
@@ -1015,11 +1020,13 @@ allow 2600:3c00:e000:4ee::2;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::2;
+allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::14;
+allow 2602:fc24:12:759::1;
 allow 2602:fc24:12:77c0::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
@@ -1640,7 +1647,6 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
-allow 44.223.217.238;
 allow 45.12.3.80;
 allow 45.128.232.151;
 allow 45.132.246.245;
@@ -1689,6 +1695,7 @@ allow 45.66.35.10;
 allow 45.66.35.20;
 allow 45.66.35.21;
 allow 45.66.35.35;
+allow 45.79.144.222;
 allow 45.79.177.21;
 allow 45.79.50.161;
 allow 45.80.158.205;
