--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -1,3 +1,4 @@
+set_real_ip_from 100.27.75.88;
 set_real_ip_from 102.130.113.9;
 set_real_ip_from 102.130.117.167;
 set_real_ip_from 102.130.127.117;
@@ -8,6 +9,7 @@ set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
 set_real_ip_from 103.172.134.26;
+set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.208.86.5;
 set_real_ip_from 103.251.167.10;
@@ -274,7 +276,6 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
-set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.165.190.111;
 set_real_ip_from 185.170.114.25;
@@ -617,6 +618,7 @@ set_real_ip_from 192.42.116.25;
 set_real_ip_from 192.42.116.26;
 set_real_ip_from 192.42.116.27;
 set_real_ip_from 192.42.116.28;
+set_real_ip_from 192.46.210.223;
 set_real_ip_from 192.99.168.180;
 set_real_ip_from 193.105.134.150;
 set_real_ip_from 193.105.134.155;
@@ -674,6 +676,7 @@ set_real_ip_from 198.251.84.237;
 set_real_ip_from 198.251.88.18;
 set_real_ip_from 198.251.89.96;
 set_real_ip_from 198.46.166.157;
+set_real_ip_from 198.46.215.32;
 set_real_ip_from 198.50.128.237;
 set_real_ip_from 198.58.107.53;
 set_real_ip_from 198.96.155.3;
@@ -959,6 +962,7 @@ set_real_ip_from 217.12.221.131;
 set_real_ip_from 217.146.2.41;
 set_real_ip_from 23.137.248.100;
 set_real_ip_from 23.137.248.139;
+set_real_ip_from 23.137.248.69;
 set_real_ip_from 23.137.250.34;
 set_real_ip_from 23.137.250.83;
 set_real_ip_from 23.137.253.108;
@@ -997,6 +1001,7 @@ set_real_ip_from 23.236.122.62;
 set_real_ip_from 23.26.133.239;
 set_real_ip_from 23.94.211.25;
 set_real_ip_from 23.94.36.142;
+set_real_ip_from 2400:8904::f03c:93ff:fe68:23b3;
 set_real_ip_from 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 set_real_ip_from 2402:1f00:8000:239::;
 set_real_ip_from 2402:1f00:8100:400::9;
@@ -1015,11 +1020,13 @@ set_real_ip_from 2600:3c00:e000:4ee::2;
 set_real_ip_from 2600:3c00::f03c:91ff:fe73:f9ba;
 set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c03:e000:fa::2;
+set_real_ip_from 2600:3c03::f03c:91ff:fe24:47be;
 set_real_ip_from 2600:3c03::f03c:94ff:fed1:8c69;
 set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:4::;
 set_real_ip_from 2602:2e6:0:6::;
 set_real_ip_from 2602:f9f3:0:2::14;
+set_real_ip_from 2602:fc24:12:759::1;
 set_real_ip_from 2602:fc24:12:77c0::1;
 set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:12:a679::1;
@@ -1640,7 +1647,6 @@ set_real_ip_from 37.252.255.135;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.97.116.244;
-set_real_ip_from 44.223.217.238;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.232.151;
 set_real_ip_from 45.132.246.245;
@@ -1689,6 +1695,7 @@ set_real_ip_from 45.66.35.10;
 set_real_ip_from 45.66.35.20;
 set_real_ip_from 45.66.35.21;
 set_real_ip_from 45.66.35.35;
+set_real_ip_from 45.79.144.222;
 set_real_ip_from 45.79.177.21;
 set_real_ip_from 45.79.50.161;
 set_real_ip_from 45.80.158.205;
