Update lists at 20240501-2100

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -1,6 +1,5 @@
 allow 2001:1620:51a1:0:8aae:ddff:fe61:8ccc;
 allow 2001:1af8:4700:a114:6::1;
-allow 2001:1b60:2:1:3935:104:0:1;
 allow 2001:1b60:3:220:3039:101:0:1;
 allow 2001:1b60:3:221:3132:102:0:1;
 allow 2001:1b60:3:221:4134:101:0:1;
@@ -21,7 +20,6 @@ allow 2001:41d0:701:1100::4f60;
 allow 2001:41d0:800:1f70::;
 allow 2001:41d0:801:2000::15bb;
 allow 2001:41d0:a:5c0::1;
-allow 2001:41d0:a:fe22::1;
 allow 2001:470:1:908::9001;
 allow 2001:4b20:12:f001::105;
 allow 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
@@ -118,7 +116,6 @@ allow 2001:910:1400:107::2;
 allow 2001:9b1:c300:3044::610;
 allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
-allow 2001:bc8:700:9212::1;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 allow 2400:8904::f03c:93ff:fe68:23b3;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
@@ -131,7 +128,6 @@ allow 2600:3c03:e000:fa::2;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2602:2e5::104;
-allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::14;
 allow 2602:fc24:12:759::1;
@@ -148,7 +144,6 @@ allow 2602:fef9:100:1100::199;
 allow 2603:3:610a:5050::;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
-allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
 allow 2605:6400:10:1008:1111:1111:1111:1111;
 allow 2605:6400:10:1060:411f:41d8:11fe:716f;
@@ -226,11 +221,11 @@ allow 2605:6400:30:f763::2;
 allow 2605:6400:30:f78b::2;
 allow 2605:6400:30:f7c0:8511:b113:ca11:9baa;
 allow 2605:6400:30:f7ca::2;
+allow 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
 allow 2605:6400:30:f805:1e96:b223:fbe5:cfac;
 allow 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
 allow 2605:6400:30:f858:2704:73e1:7085:12ef;
 allow 2605:6400:30:f8b5:620c:dc25:c624:aafd;
-allow 2605:6400:30:f8d5::1;
 allow 2605:6400:30:f8da:2b2:a293:30ad:506d;
 allow 2605:6400:30:f920:f523:28ef:3617:8b86;
 allow 2605:6400:40:fe09::2;
@@ -242,6 +237,7 @@ allow 2607:5300:205:200::4894;
 allow 2607:5300:61:785::;
 allow 2607:5300:61:785:1:2:3:4;
 allow 2607:f530:8002::19;
+allow 2620:59:a000:9666:216:3eff:fe7d:dae8;
 allow 2620:7:6001::101;
 allow 2620:7:6001::102;
 allow 2620:7:6001::103;
@@ -279,7 +275,6 @@ allow 2620:7:6001::150;
 allow 2620:7:6001::151;
 allow 2620:7:6001::152;
 allow 2620:7:6001::153;
-allow 2620:7:6001::154;
 allow 2620:7:6001::155;
 allow 2620:7:6001::156;
 allow 2620:7:6001::157;
@@ -337,8 +332,6 @@ allow 2620:7:6001::ffff:c759:e651;
 allow 2620:7:6001::ffff:c759:e652;
 allow 2620:7:6001::ffff:c759:e653;
 allow 2620:7:6001::ffff:c759:e654;
-allow 2620:7:6001::ffff:c759:e655;
-allow 2620:7:6001::ffff:c759:e656;
 allow 2620:7:6001::ffff:c759:e657;
 allow 2620:7:6001::ffff:c759:e658;
 allow 2620:7:6001::ffff:c759:e659;
@@ -364,7 +357,6 @@ allow 2a01:7a7:2:3c19:216:3cff:fed7:d6b7;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e03::f03c:94ff:fe7d:8250;
-allow 2a02:13f0:8100:6:205:ce4a:e2d2:1;
 allow 2a02:13f0:8100:6:6bc:499d:b353:1;
 allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
@@ -452,7 +444,6 @@ allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:104:fe02::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:82c0::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:108:4b9e::1;
 allow 2a04:52c0:108:a34f::1;
@@ -499,7 +490,6 @@ allow 2a06:d380:0:103::63;
 allow 2a06:e80:3000:1:bad:babe:ca11:911;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
-allow 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 allow 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 allow 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
 allow 2a0b:f4c0:16c:10::1;
@@ -551,7 +541,6 @@ allow 2a0b:f4c2:1::155;
 allow 2a0b:f4c2:1::156;
 allow 2a0b:f4c2:1::157;
 allow 2a0b:f4c2:1::158;
-allow 2a0b:f4c2:1::159;
 allow 2a0b:f4c2:1::160;
 allow 2a0b:f4c2:1::161;
 allow 2a0b:f4c2:1::162;
@@ -689,7 +678,6 @@ allow 2a0c:2500:571:3b8:2703:f58a:8b07:7801;
 allow 2a0c:2500:571:3b8:c584:d85:46e9:56ef;
 allow 2a0c:2500:571:3b8:caf7:be28:d452:b708;
 allow 2a0c:e300::23;
-allow 2a0d:3e83:1:b284::1;
 allow 2a0d:c2c0:1:4::2;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:ed78:7632;
@@ -706,12 +694,10 @@ allow 2a0f:df00:0:255::197;
 allow 2a0f:df00:0:255::198;
 allow 2a0f:df00:0:255::199;
 allow 2a0f:df00:0:255::200;
-allow 2a0f:df00:0:255::201;
 allow 2a0f:df00:0:255::202;
 allow 2a0f:df00:0:255::203;
 allow 2a0f:df00:0:255::204;
 allow 2a0f:df00:0:255::205;
-allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
 allow 2a0f:e586:f:f::188;
@@ -734,4 +720,3 @@ allow 2a12:5940:c826::2;
 allow 2a12:5940:f0a8::2;
 allow 2a12:8641:3:12::;
 allow 2a12:8641:3:24::;
-allow 2a12:a800:2:1:45:138:16:203;
