Update lists at 20240502-2100

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -195,7 +195,6 @@ allow 173.232.195.137;
 allow 173.232.195.144;
 allow 173.232.195.146;
 allow 173.249.57.253;
-allow 175.214.127.6;
 allow 176.118.193.33;
 allow 176.121.81.51;
 allow 176.126.253.190;
@@ -234,6 +233,7 @@ allow 179.43.182.232;
 allow 179.43.182.58;
 allow 179.48.251.188;
 allow 180.150.226.99;
+allow 18.213.178.40;
 allow 184.105.48.40;
 allow 185.100.85.132;
 allow 185.100.85.22;
@@ -704,6 +704,7 @@ allow 2001:1b60:3:221:4134:101:0:1;
 allow 2001:1b60:3:239:1003:103:0:1;
 allow 2001:1b60:3:239:1003:106:0:1;
 allow 200.122.181.2;
+allow 2001:40e8:0:f090::100;
 allow 2001:41d0:1008:20d1::1;
 allow 2001:41d0:2:9161::1;
 allow 2001:41d0:304:200::9dce;
@@ -948,6 +949,7 @@ allow 209.141.51.30;
 allow 209.141.55.26;
 allow 209.141.59.116;
 allow 209.141.62.71;
+allow 210.223.41.36;
 allow 212.73.134.204;
 allow 212.95.50.77;
 allow 212.95.52.76;
@@ -992,6 +994,7 @@ allow 23.154.177.6;
 allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
+allow 23.155.24.6;
 allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.26.133.239;
@@ -1019,6 +1022,7 @@ allow 2600:3c03:e000:fa::1;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2602:2e5::104;
+allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::14;
 allow 2602:fc24:12:759::1;
 allow 2602:fc24:12:77c0::1;
@@ -1577,6 +1581,7 @@ allow 2a0b:f4c2::9;
 allow 2a0c:2500:571:3b8:2703:f58a:8b07:7801;
 allow 2a0c:2500:571:3b8:c584:d85:46e9:56ef;
 allow 2a0c:2500:571:3b8:caf7:be28:d452:b708;
+allow 2a0c:2500:571:3b8:d340:936f:dc70:de42;
 allow 2a0c:e300::23;
 allow 2a0d:3e83:1:b284::1;
 allow 2a0d:c2c0:1:4::2;
@@ -1628,7 +1633,6 @@ allow 31.129.22.65;
 allow 31.220.98.139;
 allow 31.42.185.134;
 allow 35.0.127.52;
-allow 35.168.182.167;
 allow 35.240.241.135;
 allow 37.1.201.144;
 allow 37.120.166.23;
@@ -1818,6 +1822,7 @@ allow 77.91.87.79;
 allow 78.142.18.219;
 allow 79.124.8.241;
 allow 79.137.198.213;
+allow 79.50.224.220;
 allow 80.210.78.252;
 allow 80.241.60.207;
 allow 80.67.167.81;
@@ -1835,7 +1840,6 @@ allow 82.221.131.5;
 allow 82.221.131.71;
 allow 82.221.139.190;
 allow 83.217.9.73;
-allow 83.4.110.6;
 allow 83.96.213.63;
 allow 83.97.20.77;
 allow 84.16.224.227;
@@ -1843,6 +1847,7 @@ allow 84.19.182.20;
 allow 84.211.225.54;
 allow 84.239.46.144;
 allow 84.247.165.51;
+allow 84.252.120.234;
 allow 84.252.122.130;
 allow 84.38.134.230;
 allow 84.38.134.231;
@@ -1856,6 +1861,7 @@ allow 84.38.134.238;
 allow 84.38.134.239;
 allow 84.38.134.240;
 allow 84.38.134.241;
+allow 84.38.187.151;
 allow 84.54.51.61;
 allow 84.54.51.68;
 allow 84.54.51.69;
@@ -1887,6 +1893,7 @@ allow 89.149.37.83;
 allow 89.185.85.140;
 allow 89.187.143.31;
 allow 89.234.157.254;
+allow 89.236.112.100;
 allow 89.58.18.210;
 allow 89.58.26.216;
 allow 89.58.41.156;
@@ -1898,7 +1905,6 @@ allow 91.139.160.150;
 allow 91.203.144.194;
 allow 91.203.145.116;
 allow 91.206.26.26;
-allow 91.208.197.144;
 allow 91.208.75.153;
 allow 91.208.75.156;
 allow 91.208.75.178;
@@ -1961,4 +1967,5 @@ allow 95.164.46.204;
 allow 95.168.173.143;
 allow 95.211.210.103;
 allow 95.211.244.28;
+allow 96.42.26.63;
 allow 98.128.173.33;
