--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -195,7 +195,6 @@ set_real_ip_from 173.232.195.137;
 set_real_ip_from 173.232.195.144;
 set_real_ip_from 173.232.195.146;
 set_real_ip_from 173.249.57.253;
-set_real_ip_from 175.214.127.6;
 set_real_ip_from 176.118.193.33;
 set_real_ip_from 176.121.81.51;
 set_real_ip_from 176.126.253.190;
@@ -234,6 +233,7 @@ set_real_ip_from 179.43.182.232;
 set_real_ip_from 179.43.182.58;
 set_real_ip_from 179.48.251.188;
 set_real_ip_from 180.150.226.99;
+set_real_ip_from 18.213.178.40;
 set_real_ip_from 184.105.48.40;
 set_real_ip_from 185.100.85.132;
 set_real_ip_from 185.100.85.22;
@@ -704,6 +704,7 @@ set_real_ip_from 2001:1b60:3:221:4134:101:0:1;
 set_real_ip_from 2001:1b60:3:239:1003:103:0:1;
 set_real_ip_from 2001:1b60:3:239:1003:106:0:1;
 set_real_ip_from 200.122.181.2;
+set_real_ip_from 2001:40e8:0:f090::100;
 set_real_ip_from 2001:41d0:1008:20d1::1;
 set_real_ip_from 2001:41d0:2:9161::1;
 set_real_ip_from 2001:41d0:304:200::9dce;
@@ -948,6 +949,7 @@ set_real_ip_from 209.141.51.30;
 set_real_ip_from 209.141.55.26;
 set_real_ip_from 209.141.59.116;
 set_real_ip_from 209.141.62.71;
+set_real_ip_from 210.223.41.36;
 set_real_ip_from 212.73.134.204;
 set_real_ip_from 212.95.50.77;
 set_real_ip_from 212.95.52.76;
@@ -992,6 +994,7 @@ set_real_ip_from 23.154.177.6;
 set_real_ip_from 23.154.177.7;
 set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
+set_real_ip_from 23.155.24.6;
 set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.236.122.62;
 set_real_ip_from 23.26.133.239;
@@ -1019,6 +1022,7 @@ set_real_ip_from 2600:3c03:e000:fa::1;
 set_real_ip_from 2600:3c03::f03c:91ff:fe24:47be;
 set_real_ip_from 2600:3c03::f03c:94ff:fed1:8c69;
 set_real_ip_from 2602:2e5::104;
+set_real_ip_from 2602:2e6:0:6::;
 set_real_ip_from 2602:f9f3:0:2::14;
 set_real_ip_from 2602:fc24:12:759::1;
 set_real_ip_from 2602:fc24:12:77c0::1;
@@ -1577,6 +1581,7 @@ set_real_ip_from 2a0b:f4c2::9;
 set_real_ip_from 2a0c:2500:571:3b8:2703:f58a:8b07:7801;
 set_real_ip_from 2a0c:2500:571:3b8:c584:d85:46e9:56ef;
 set_real_ip_from 2a0c:2500:571:3b8:caf7:be28:d452:b708;
+set_real_ip_from 2a0c:2500:571:3b8:d340:936f:dc70:de42;
 set_real_ip_from 2a0c:e300::23;
 set_real_ip_from 2a0d:3e83:1:b284::1;
 set_real_ip_from 2a0d:c2c0:1:4::2;
@@ -1628,7 +1633,6 @@ set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.98.139;
 set_real_ip_from 31.42.185.134;
 set_real_ip_from 35.0.127.52;
-set_real_ip_from 35.168.182.167;
 set_real_ip_from 35.240.241.135;
 set_real_ip_from 37.1.201.144;
 set_real_ip_from 37.120.166.23;
@@ -1818,6 +1822,7 @@ set_real_ip_from 77.91.87.79;
 set_real_ip_from 78.142.18.219;
 set_real_ip_from 79.124.8.241;
 set_real_ip_from 79.137.198.213;
+set_real_ip_from 79.50.224.220;
 set_real_ip_from 80.210.78.252;
 set_real_ip_from 80.241.60.207;
 set_real_ip_from 80.67.167.81;
@@ -1835,7 +1840,6 @@ set_real_ip_from 82.221.131.5;
 set_real_ip_from 82.221.131.71;
 set_real_ip_from 82.221.139.190;
 set_real_ip_from 83.217.9.73;
-set_real_ip_from 83.4.110.6;
 set_real_ip_from 83.96.213.63;
 set_real_ip_from 83.97.20.77;
 set_real_ip_from 84.16.224.227;
@@ -1843,6 +1847,7 @@ set_real_ip_from 84.19.182.20;
 set_real_ip_from 84.211.225.54;
 set_real_ip_from 84.239.46.144;
 set_real_ip_from 84.247.165.51;
+set_real_ip_from 84.252.120.234;
 set_real_ip_from 84.252.122.130;
 set_real_ip_from 84.38.134.230;
 set_real_ip_from 84.38.134.231;
@@ -1856,6 +1861,7 @@ set_real_ip_from 84.38.134.238;
 set_real_ip_from 84.38.134.239;
 set_real_ip_from 84.38.134.240;
 set_real_ip_from 84.38.134.241;
+set_real_ip_from 84.38.187.151;
 set_real_ip_from 84.54.51.61;
 set_real_ip_from 84.54.51.68;
 set_real_ip_from 84.54.51.69;
@@ -1887,6 +1893,7 @@ set_real_ip_from 89.149.37.83;
 set_real_ip_from 89.185.85.140;
 set_real_ip_from 89.187.143.31;
 set_real_ip_from 89.234.157.254;
+set_real_ip_from 89.236.112.100;
 set_real_ip_from 89.58.18.210;
 set_real_ip_from 89.58.26.216;
 set_real_ip_from 89.58.41.156;
@@ -1898,7 +1905,6 @@ set_real_ip_from 91.139.160.150;
 set_real_ip_from 91.203.144.194;
 set_real_ip_from 91.203.145.116;
 set_real_ip_from 91.206.26.26;
-set_real_ip_from 91.208.197.144;
 set_real_ip_from 91.208.75.153;
 set_real_ip_from 91.208.75.156;
 set_real_ip_from 91.208.75.178;
@@ -1961,4 +1967,5 @@ set_real_ip_from 95.164.46.204;
 set_real_ip_from 95.168.173.143;
 set_real_ip_from 95.211.210.103;
 set_real_ip_from 95.211.244.28;
+set_real_ip_from 96.42.26.63;
 set_real_ip_from 98.128.173.33;
