--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -120,7 +120,6 @@ allow 130.193.10.21;
 allow 130.193.15.186;
 allow 134.122.66.38;
 allow 135.125.205.25;
-allow 135.181.124.211;
 allow 136.244.111.163;
 allow 138.59.18.110;
 allow 139.99.172.11;
@@ -663,6 +662,7 @@ allow 195.176.3.24;
 allow 195.80.151.242;
 allow 195.88.74.206;
 allow 198.12.111.102;
+allow 198.167.206.171;
 allow 198.23.133.132;
 allow 198.251.84.163;
 allow 198.251.84.237;
@@ -940,14 +940,12 @@ allow 209.141.51.30;
 allow 209.141.55.26;
 allow 209.141.59.116;
 allow 209.141.62.71;
-allow 210.223.41.36;
 allow 212.73.134.204;
 allow 212.95.50.77;
 allow 212.95.52.76;
 allow 213.252.140.118;
 allow 213.95.149.22;
 allow 216.239.90.19;
-allow 216.73.159.101;
 allow 216.73.159.75;
 allow 217.12.221.131;
 allow 217.146.2.41;
@@ -1238,7 +1236,6 @@ allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
 allow 2a01:4262:1ab:ffff::133;
-allow 2a01:4f9:4a:4442::5;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
@@ -1250,6 +1247,7 @@ allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
+allow 2a02:6f8:2020:206:b::171;
 allow 2a02:7aa0:1619::ba45:e7f2;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
@@ -1332,7 +1330,6 @@ allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:104:fe02::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:82c0::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:108:4b9e::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1610,6 +1607,7 @@ allow 2a12:5940:b4db::2;
 allow 2a12:5940:b4dd::2;
 allow 2a12:5940:c814::2;
 allow 2a12:5940:c826::2;
+allow 2a12:5940:d0e2::2;
 allow 2a12:5940:f0a8::2;
 allow 2a12:8641:3:12::;
 allow 2a12:8641:3:24::;
@@ -1617,6 +1615,7 @@ allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.220.98.139;
 allow 31.42.185.134;
+allow 34.239.13.134;
 allow 35.0.127.52;
 allow 35.240.241.135;
 allow 37.1.201.144;
@@ -1672,6 +1671,7 @@ allow 45.151.167.11;
 allow 45.151.167.12;
 allow 45.151.167.13;
 allow 45.15.157.177;
+allow 45.15.158.165;
 allow 45.61.184.47;
 allow 45.61.185.172;
 allow 45.66.35.10;
@@ -1726,7 +1726,6 @@ allow 5.196.95.34;
 allow 5.255.100.126;
 allow 5.255.100.219;
 allow 5.255.100.224;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.190;
 allow 5.255.103.235;
@@ -1763,7 +1762,6 @@ allow 54.36.108.162;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
-allow 54.81.154.87;
 allow 5.61.51.143;
 allow 57.129.20.162;
 allow 5.79.66.19;
