Update lists at 20240504-0300

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -151,6 +151,7 @@ allow 152.89.233.169;
 allow 154.16.116.61;
 allow 158.179.215.241;
 allow 160.119.249.240;
+allow 161.35.129.51;
 allow 162.247.72.192;
 allow 162.247.72.199;
 allow 162.247.74.200;
@@ -191,7 +192,6 @@ allow 173.232.195.144;
 allow 173.232.195.146;
 allow 173.249.57.253;
 allow 176.118.193.33;
-allow 176.121.81.51;
 allow 176.126.253.190;
 allow 176.58.100.98;
 allow 176.58.121.177;
@@ -275,7 +275,6 @@ allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
-allow 185.174.136.114;
 allow 185.181.60.135;
 allow 185.181.61.115;
 allow 185.181.61.142;
@@ -1332,6 +1331,7 @@ allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:104:fe02::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:82c0::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:108:4b9e::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1609,7 +1609,6 @@ allow 2a12:5940:b4db::2;
 allow 2a12:5940:b4dd::2;
 allow 2a12:5940:c814::2;
 allow 2a12:5940:c826::2;
-allow 2a12:5940:d0e2::2;
 allow 2a12:5940:f0a8::2;
 allow 2a12:8641:3:12::;
 allow 2a12:8641:3:24::;
@@ -1617,7 +1616,7 @@ allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.220.98.139;
 allow 31.42.185.134;
-allow 3.227.151.215;
+allow 3.208.220.171;
 allow 35.0.127.52;
 allow 35.240.241.135;
 allow 37.1.201.144;
@@ -1672,8 +1671,6 @@ allow 45.151.167.11;
 allow 45.151.167.12;
 allow 45.151.167.13;
 allow 45.15.157.177;
-allow 45.15.158.165;
-allow 45.15.158.39;
 allow 45.56.104.167;
 allow 45.61.184.47;
 allow 45.61.185.172;
@@ -1729,6 +1726,7 @@ allow 5.196.95.34;
 allow 5.255.100.126;
 allow 5.255.100.219;
 allow 5.255.100.224;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.190;
 allow 5.255.103.235;
@@ -1843,6 +1841,7 @@ allow 88.209.197.8;
 allow 88.80.20.86;
 allow 89.147.108.209;
 allow 89.147.108.62;
+allow 89.147.108.90;
 allow 89.147.109.226;
 allow 89.147.110.118;
 allow 89.147.110.154;
