--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -151,6 +151,7 @@ set_real_ip_from 152.89.233.169;
 set_real_ip_from 154.16.116.61;
 set_real_ip_from 158.179.215.241;
 set_real_ip_from 160.119.249.240;
+set_real_ip_from 161.35.129.51;
 set_real_ip_from 162.247.72.192;
 set_real_ip_from 162.247.72.199;
 set_real_ip_from 162.247.74.200;
@@ -191,7 +192,6 @@ set_real_ip_from 173.232.195.144;
 set_real_ip_from 173.232.195.146;
 set_real_ip_from 173.249.57.253;
 set_real_ip_from 176.118.193.33;
-set_real_ip_from 176.121.81.51;
 set_real_ip_from 176.126.253.190;
 set_real_ip_from 176.58.100.98;
 set_real_ip_from 176.58.121.177;
@@ -275,7 +275,6 @@ set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.165.190.111;
 set_real_ip_from 185.170.114.25;
-set_real_ip_from 185.174.136.114;
 set_real_ip_from 185.181.60.135;
 set_real_ip_from 185.181.61.115;
 set_real_ip_from 185.181.61.142;
@@ -1332,6 +1331,7 @@ set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:104:fe02::1;
 set_real_ip_from 2a04:52c0:105:78fc::1;
 set_real_ip_from 2a04:52c0:105:82c0::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394::1;
 set_real_ip_from 2a04:52c0:108:4b9e::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -1609,7 +1609,6 @@ set_real_ip_from 2a12:5940:b4db::2;
 set_real_ip_from 2a12:5940:b4dd::2;
 set_real_ip_from 2a12:5940:c814::2;
 set_real_ip_from 2a12:5940:c826::2;
-set_real_ip_from 2a12:5940:d0e2::2;
 set_real_ip_from 2a12:5940:f0a8::2;
 set_real_ip_from 2a12:8641:3:12::;
 set_real_ip_from 2a12:8641:3:24::;
@@ -1617,7 +1616,7 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.98.139;
 set_real_ip_from 31.42.185.134;
-set_real_ip_from 3.227.151.215;
+set_real_ip_from 3.208.220.171;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 35.240.241.135;
 set_real_ip_from 37.1.201.144;
@@ -1672,8 +1671,6 @@ set_real_ip_from 45.151.167.11;
 set_real_ip_from 45.151.167.12;
 set_real_ip_from 45.151.167.13;
 set_real_ip_from 45.15.157.177;
-set_real_ip_from 45.15.158.165;
-set_real_ip_from 45.15.158.39;
 set_real_ip_from 45.56.104.167;
 set_real_ip_from 45.61.184.47;
 set_real_ip_from 45.61.185.172;
@@ -1729,6 +1726,7 @@ set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.126;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.224;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.103.190;
 set_real_ip_from 5.255.103.235;
@@ -1843,6 +1841,7 @@ set_real_ip_from 88.209.197.8;
 set_real_ip_from 88.80.20.86;
 set_real_ip_from 89.147.108.209;
 set_real_ip_from 89.147.108.62;
+set_real_ip_from 89.147.108.90;
 set_real_ip_from 89.147.109.226;
 set_real_ip_from 89.147.110.118;
 set_real_ip_from 89.147.110.154;
