Update lists at 20240504-1200

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -125,7 +125,6 @@ allow 138.59.18.110;
 allow 139.99.172.11;
 allow 139.99.8.57;
 allow 141.239.149.94;
-allow 141.98.10.14;
 allow 141.98.11.62;
 allow 142.171.211.123;
 allow 142.44.234.69;
@@ -172,7 +171,9 @@ allow 165.73.242.163;
 allow 166.70.207.2;
 allow 167.99.208.41;
 allow 171.25.193.20;
+allow 171.25.193.234;
 allow 171.25.193.235;
+allow 171.25.193.25;
 allow 171.25.193.77;
 allow 171.25.193.78;
 allow 171.25.193.79;
@@ -194,7 +195,6 @@ allow 176.126.253.190;
 allow 176.58.100.98;
 allow 176.58.121.177;
 allow 178.162.209.56;
-allow 178.17.170.184;
 allow 178.17.170.23;
 allow 178.17.171.102;
 allow 178.17.174.14;
@@ -226,7 +226,6 @@ allow 179.43.182.232;
 allow 179.43.182.58;
 allow 179.48.251.188;
 allow 180.150.226.99;
-allow 18.208.35.60;
 allow 184.105.48.40;
 allow 184.75.223.219;
 allow 185.100.85.132;
@@ -265,12 +264,10 @@ allow 185.130.44.43;
 allow 185.130.47.58;
 allow 185.141.147.128;
 allow 185.142.239.49;
-allow 185.146.232.234;
 allow 185.146.232.243;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -725,7 +722,9 @@ allow 2001:678:e3c::d;
 allow 2001:67c:2044:1905::26;
 allow 2001:67c:2608::1;
 allow 2001:67c:289c::20;
+allow 2001:67c:289c:2::234;
 allow 2001:67c:289c:2::235;
+allow 2001:67c:289c::25;
 allow 2001:67c:289c:4::77;
 allow 2001:67c:289c:4::78;
 allow 2001:67c:289c:4::79;
@@ -922,8 +921,6 @@ allow 204.8.96.89;
 allow 205.185.113.180;
 allow 205.185.116.34;
 allow 205.185.117.149;
-allow 205.185.121.170;
-allow 205.185.123.93;
 allow 205.185.124.176;
 allow 205.185.124.193;
 allow 206.237.98.52;
@@ -1229,7 +1226,6 @@ allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
-allow 2a00:1dc0:caff:178::982b;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
@@ -1613,6 +1609,7 @@ allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.220.98.139;
 allow 31.42.185.134;
+allow 34.203.146.95;
 allow 35.0.127.52;
 allow 35.240.241.135;
 allow 37.1.201.144;
