--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -36,7 +36,9 @@ deny 2001:678:e3c::d;
 deny 2001:67c:2044:1905::26;
 deny 2001:67c:2608::1;
 deny 2001:67c:289c::20;
+deny 2001:67c:289c:2::234;
 deny 2001:67c:289c:2::235;
+deny 2001:67c:289c::25;
 deny 2001:67c:289c:4::77;
 deny 2001:67c:289c:4::78;
 deny 2001:67c:289c:4::79;
@@ -348,7 +350,6 @@ deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:138::94d2;
 deny 2a00:1dc0:caff:15::45dc;
-deny 2a00:1dc0:caff:178::982b;
 deny 2a00:1dc0:caff:73::a568;
 deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:99a0:0:1000::2;
