Update lists at 20240505-0300

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -73,6 +73,7 @@ allow 107.189.4.12;
 allow 107.189.4.158;
 allow 107.189.4.209;
 allow 107.189.5.121;
+allow 107.189.5.18;
 allow 107.189.5.19;
 allow 107.189.5.7;
 allow 107.189.6.124;
@@ -243,6 +244,7 @@ allow 185.10.16.41;
 allow 185.106.102.102;
 allow 185.106.94.195;
 allow 185.107.70.56;
+allow 185.11.136.232;
 allow 185.112.146.168;
 allow 185.113.128.30;
 allow 185.129.61.1;
@@ -1071,6 +1073,7 @@ allow 2605:6400:30:f174:4:3:2:1;
 allow 2605:6400:30:f174:cafe::;
 allow 2605:6400:30:f1fa:f57f:d285:3ed9:ee27;
 allow 2605:6400:30:f307:1712:1a11:9b1c:ab7f;
+allow 2605:6400:30:f307:3aa6:91d4:da12:7eee;
 allow 2605:6400:30:f307:5d12:16d8:1641:2b15;
 allow 2605:6400:30:f307:ba73:e934:5195:accd;
 allow 2605:6400:30:f307:c2bf:d371:75a9:31e6;
@@ -1220,6 +1223,7 @@ allow 2a00:11c0:1c:311::5;
 allow 2a00:11c0:1f:1::55;
 allow 2a00:1728:3f::c0cc:80;
 allow 2a00:1728:f:f:f:f:c03c:9898;
+allow 2a00:17d8:100:1::fc1;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:138::94d2;
@@ -1321,6 +1325,7 @@ allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:104:fe02::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:82c0::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:108:4b9e::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1596,6 +1601,7 @@ allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.220.98.139;
 allow 31.42.185.134;
+allow 34.224.228.4;
 allow 35.0.127.52;
 allow 35.240.241.135;
 allow 37.1.201.144;
@@ -1633,6 +1639,7 @@ allow 45.141.215.111;
 allow 45.141.215.114;
 allow 45.141.215.167;
 allow 45.141.215.169;
+allow 45.141.215.170;
 allow 45.141.215.21;
 allow 45.141.215.56;
 allow 45.141.215.61;
@@ -1702,10 +1709,10 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
-allow 52.1.243.64;
 allow 5.255.100.126;
 allow 5.255.100.219;
 allow 5.255.100.224;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.190;
 allow 5.255.103.235;
@@ -1846,6 +1853,7 @@ allow 91.139.160.150;
 allow 91.203.144.194;
 allow 91.203.145.116;
 allow 91.206.26.26;
+allow 91.208.197.144;
 allow 91.208.75.153;
 allow 91.208.75.156;
 allow 91.208.75.178;
