--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -196,6 +196,7 @@ allow 2605:6400:30:f174:4:3:2:1;
 allow 2605:6400:30:f174:cafe::;
 allow 2605:6400:30:f1fa:f57f:d285:3ed9:ee27;
 allow 2605:6400:30:f307:1712:1a11:9b1c:ab7f;
+allow 2605:6400:30:f307:3aa6:91d4:da12:7eee;
 allow 2605:6400:30:f307:5d12:16d8:1641:2b15;
 allow 2605:6400:30:f307:ba73:e934:5195:accd;
 allow 2605:6400:30:f307:c2bf:d371:75a9:31e6;
@@ -344,6 +345,7 @@ allow 2a00:11c0:1c:311::5;
 allow 2a00:11c0:1f:1::55;
 allow 2a00:1728:3f::c0cc:80;
 allow 2a00:1728:f:f:f:f:c03c:9898;
+allow 2a00:17d8:100:1::fc1;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:138::94d2;
@@ -445,6 +447,7 @@ allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:104:fe02::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:82c0::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:108:4b9e::1;
 allow 2a04:52c0:108:a34f::1;
