Update lists at 20240505-1200

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,3 +1,4 @@
+allow 100.24.207.192;
 allow 102.130.113.9;
 allow 102.130.117.167;
 allow 102.130.127.117;
@@ -986,6 +987,7 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.6;
+allow 23.155.8.104;
 allow 23.94.211.25;
 allow 2400:8904::f03c:93ff:fe68:23b3;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
@@ -1008,6 +1010,7 @@ allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::3;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
+allow 2602:2e5::104;
 allow 2602:2e6:0:6::;
 allow 2602:fc24:12:759::1;
 allow 2602:fc24:12:77c0::1;
@@ -1680,6 +1683,13 @@ allow 45.92.1.74;
 allow 45.94.31.180;
 allow 45.95.169.184;
 allow 45.95.169.223;
+allow 45.95.169.224;
+allow 45.95.169.225;
+allow 45.95.169.226;
+allow 45.95.169.227;
+allow 45.95.169.228;
+allow 45.95.169.229;
+allow 45.95.169.230;
 allow 45.95.169.255;
 allow 45.95.202.48;
 allow 46.165.243.36;
@@ -1738,8 +1748,6 @@ allow 5.255.99.5;
 allow 5.2.67.226;
 allow 5.2.79.190;
 allow 5.34.182.203;
-allow 54.236.170.86;
-allow 5.42.66.6;
 allow 5.42.80.232;
 allow 5.42.80.233;
 allow 5.42.80.234;
@@ -1835,7 +1843,6 @@ allow 89.147.110.118;
 allow 89.147.110.154;
 allow 89.147.110.200;
 allow 89.147.110.202;
-allow 89.147.110.214;
 allow 89.147.110.82;
 allow 89.147.111.124;
 allow 89.147.111.87;
